--- a/src/styles/drum_sequencer.css
+++ b/src/styles/drum_sequencer.css
@@ -18,8 +18,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  gap: 0.5rem;
+  /* gap: 0.5rem; */
   overflow-x: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -27,9 +29,17 @@
   display: none;
 }
 
-.track-container {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+.track {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 1rem;
+}
+
+.track-controls {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .note-box-container {
