--- a/src/styles/drum_sequencer.css
+++ b/src/styles/drum_sequencer.css
@@ -18,7 +18,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  /* gap: 0.5rem; */
+  gap: 0.3rem;
   overflow-x: scroll;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
@@ -40,7 +40,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  gap: 0.2rem;
+  gap: 0.3rem;
 }
 
 .track-mute-btn {
@@ -68,7 +68,7 @@
   border: none;
   border-radius: 50%;
   background-color: var(--BACKGROUND_HOME);
-  --circle-size: calc(var(--size) - 0.45rem);
+  --circle-size: calc(var(--size) - 0.5rem);
   width: var(--circle-size);
   height: var(--circle-size);
   min-width: var(--circle-size);
@@ -76,28 +76,38 @@
 }
 
 .knob {
-  --knob-size: 0.85rem;
+  --knob-size: 0.9rem;
   width: var(--knob-size);
   height: var(--knob-size);
   min-width: var(--knob-size);
   min-height: var(--knob-size);
   border-radius: 50%;
-  border: 1px solid var(--TEXT_PRIMARY);
   background-color: var(--INTERACTABLE_COLOR);
+  transform-origin: center;
   position: relative;
 }
 
 .knob::before {
   content: "";
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 50%;
-  transform: translate(-50%, 70%);
-  width: 3px;
-  height: 3px;
+  transform: translate(-50%, -90%);
+  --circle-size: calc(var(--knob-size) - 0.7rem);
+  width: var(--circle-size);
+  height: var(--circle-size);
   border-radius: 50%;
-  border: 1px solid white;
   background-color: var(--BACKGROUND_HOME);
+}
+
+.sound-file-name {
+  font-size: 0.7rem;
+  letter-spacing: normal;
+  text-wrap: nowrap;
+  margin-left: 10px;
+  border: 2px solid var(--INTERACTABLE_COLOR);
+  border-radius: 5px;
+  padding: 0 0.3rem;
 }
 
 .note-box-container {
@@ -108,7 +118,7 @@
 }
 
 .note-box {
-  border: 2px solid var(--TEXT_PRIMARY);
+  border: 2px solid var(--INTERACTABLE_COLOR);
   border-radius: 5px;
   width: 0.5rem;
   min-width: 0.5rem;
