--- a/src/styles/drum_sequencer.css
+++ b/src/styles/drum_sequencer.css
@@ -2,11 +2,16 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: start;
   align-items: center;
+  padding: 1.5rem 0;
 }
 
 .drum-sequencer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   width: 80vw;
   border-radius: 10px;
   padding: 1rem;
@@ -145,3 +150,59 @@
 .note-is-active {
   background-color: var(--TEXT_PRIMARY);
 }
+
+.sequencer-settings-container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 1.2rem;
+  font-size: 18px;
+}
+
+.channel-rack-ui {
+  height: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--TEXT_PRIMARY);
+  border-radius: 10px;
+  background-color: var(--BACKGROUND_HOME);
+}
+
+#sequencer-play-btn,
+#swing-knob {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+#bpm-value {
+  position: absolute;
+  top: -28%;
+  left: 50%;
+  font-size: 10px;
+  font-style: italic;
+  letter-spacing: normal;
+  transform: translate(-50%, 0);
+}
+
+#clear-btn:hover {
+  background-color: var(--GRAY_ACCENT_2);
+}
+
+/* return (
+  <div className="sequencer-settings-container">
+    <img src={icons.play} className="channel-rack-ui icon" onClick={props.handlePlay} />
+    <div id="bpm-container">
+      <input type="range" min="40" max="200" value={props.bpm} className="slider" onChange={updateBPM} ref={bpmSliderRef} />
+      <div className="slider-value">{props.bpm}</div>
+    </div>
+    <select name="bars" id="bars-selector" className="dropdown-selector">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="4" selected="selected">4</option>
+      <option value="8">8</option>
+      <option value="16">16</option>
+    </select>
+    <Knob initialAngle={0} maxAngle={330} minAngle={30} className="swing-knob" />
+  </div>
+); */
