--- a/src/styles/drum_sequencer.css
+++ b/src/styles/drum_sequencer.css
@@ -25,12 +25,19 @@
   align-items: start;
   gap: 0.3rem;
   overflow-x: scroll;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+}
+
+/* TODO make this style global with classes */
+/* Hide scrollbar for IE, Edge and Firefox */
+.track-container,
+.sequencer-settings-container {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.track-container::-webkit-scrollbar {
+.track-container::-webkit-scrollbar,
+.sequencer-settings-container::-webkit-scrollbar {
   display: none;
 }
 
@@ -152,6 +159,8 @@
 }
 
 .sequencer-settings-container {
+  width: 100%;
+  overflow-x: scroll;
   display: flex;
   justify-content: start;
   align-items: center;
@@ -167,42 +176,29 @@
   color: var(--TEXT_PRIMARY);
   border-radius: 10px;
   background-color: var(--BACKGROUND_HOME);
+  letter-spacing: normal;
+  text-align: center;
+  text-wrap: nowrap;
 }
 
 #sequencer-play-btn,
 #swing-knob {
-  width: 1.5rem;
-  height: 1.5rem;
+  --size: 1.5rem;
+  width: var(--size);
+  height: var(--size);
+  min-width: var(--size);
+  min-height: var(--size);
 }
 
 #bpm-value {
-  position: absolute;
-  top: -28%;
-  left: 50%;
-  font-size: 10px;
   font-style: italic;
-  letter-spacing: normal;
-  transform: translate(-50%, 0);
+}
+
+#bars-selector,
+#clear-btn {
+  padding: 0 0.4rem;
 }
 
 #clear-btn:hover {
   background-color: var(--GRAY_ACCENT_2);
 }
-
-/* return (
-  <div className="sequencer-settings-container">
-    <img src={icons.play} className="channel-rack-ui icon" onClick={props.handlePlay} />
-    <div id="bpm-container">
-      <input type="range" min="40" max="200" value={props.bpm} className="slider" onChange={updateBPM} ref={bpmSliderRef} />
-      <div className="slider-value">{props.bpm}</div>
-    </div>
-    <select name="bars" id="bars-selector" className="dropdown-selector">
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="4" selected="selected">4</option>
-      <option value="8">8</option>
-      <option value="16">16</option>
-    </select>
-    <Knob initialAngle={0} maxAngle={330} minAngle={30} className="swing-knob" />
-  </div>
-); */
