--- a/src/styles/drum_sequencer.css
+++ b/src/styles/drum_sequencer.css
@@ -11,11 +11,32 @@
 .drum-sequencer {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  width: 80vw;
+  gap: 0.5rem;
+  max-width: 80vw;
   border-radius: 10px;
   padding: 1rem;
   border: 5px solid var(--GRAY_ACCENT_1);
+}
+
+#sequencer-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  overflow-x: scroll;
+}
+
+/* TODO make this style global with classes */
+/* Hide scrollbar for IE, Edge and Firefox */
+#sequencer-content,
+.sequencer-settings-container {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#sequencer-content::-webkit-scrollbar,
+.sequencer-settings-container::-webkit-scrollbar {
+  display: none;
 }
 
 .track-container {
@@ -24,22 +45,8 @@
   justify-content: center;
   align-items: start;
   gap: 0.3rem;
-  overflow-x: scroll;
 }
 
-/* TODO make this style global with classes */
-/* Hide scrollbar for IE, Edge and Firefox */
-.track-container,
-.sequencer-settings-container {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.track-container::-webkit-scrollbar,
-.sequencer-settings-container::-webkit-scrollbar {
-  display: none;
-}
 
 .track {
   display: flex;
@@ -129,17 +136,48 @@
 
 .note-box-container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 0.1rem;
 }
 
-.note-box {
+.note-box,
+.beat-indicator-box {
   border: 2px solid var(--INTERACTABLE_COLOR);
   border-radius: 5px;
   width: 0.5rem;
   min-width: 0.5rem;
   height: 1rem;
+}
+
+#beat-indicator-container {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+
+.beat-indicator-box {
+  width: 0.5rem;
+  min-width: 0.5rem;
+  height: 1rem;
+  background-color: transparent;
+  cursor: auto;
+  border-color: transparent;
+  position: relative;
+}
+
+.beat-indicator {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 5px;
+  height: 5px;
+  background-color: var(--INTERACTABLE_COLOR);
+  border: none;
+  border-radius: 50%;
+  opacity: 0.2;
 }
 
 .note-patch-1 {
