fix sequencer styles

--- a/src/styles/drum_sequencer.css
+++ b/src/styles/drum_sequencer.css
@@ -199,6 +199,7 @@
 .sequencer-settings-container {
   width: 100%;
   overflow-x: scroll;
+  overflow-y: hidden;
   display: flex;
   justify-content: start;
   align-items: center;
