--- a/src/styles/drum_sequencer.css
+++ b/src/styles/drum_sequencer.css
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   padding: 1.5rem 0;
 }
@@ -12,7 +12,6 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  max-width: 80vw;
   border-radius: 10px;
   padding: 1rem;
   border: 5px solid var(--GRAY_ACCENT_1);
